compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/unresolvedQuialifierInAnnotation.fir.java
@Ann(kClass = some.name.Unresolved.class)
public final class A /* A*/ {
  public  A();//  .ctor()
}
